--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
 
 <div class="container">
-	<h1>Data de início e fim em um intervalo de 30 dias.</h1>
+	<h1>YOGA</h1>
+	<h2>Teste de data de início e fim em um intervalo de 30 dias.</h2>
 	<form>
 	  <div class="mb-3">
 	    <label for="inicio" class="form-label">Início</label>
