--- a/index.html
+++ b/index.html
@@ -8,20 +8,19 @@
 </head>
 <body>
 
-<div class="container">
-	<h1>YOGA</h1>
-	<h2>Teste de data de início e fim em um intervalo de 30 dias.</h2>
-	<form>
-	  <div class="mb-3">
-	    <label for="inicio" class="form-label">Início</label>
-	    <input type="date" class="form-control" id="inicio" onchange="getDataFinal()">
-	  </div>
-	  <div class="mb-3">
-	    <label for="fim" class="form-label">Fim</label>
-	    <input type="date" class="form-control" id="fim" readonly>
-	  </div>
-	</form>
-</div>
+	<div class="container">
+		<h2 class="text-center mt-3">Data de início e fim em um intervalo de 30 dias.</h2>
+		<form>
+		  <div class="input-group mt-3">
+			  <span class="input-group-text">Data</span>
+			  <input type="date" class="form-control" id="inicio" onchange="getDataFinal()">
+			  <input type="date" class="form-control" id="fim" readonly>
+		  </div>
+		</form>
+		<div class="row">
+			<img src="./logotipo-yoga-original.png" class="img-fluid">
+		</div>
+	</div>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
